<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coremobile.coreyhealth.AddStaffActivityCMN" >
 <!-- header -->
    <include layout="@layout/layoutheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />
    
     <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
   
       
        android:layout_marginLeft="@dimen/ctrl_margin_left"
        android:layout_marginRight="@dimen/ctrl_margin_right"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
        <Button
            android:id="@+id/contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_contacts"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_people"
            android:layout_marginTop="@dimen/group_gap"
        />

        <EditText
            android:id="@+id/staff_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stafffname_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:textSize="@dimen/normal_text_size"
            android:layout_marginTop="@dimen/text_gap"
        />
 		<com.coremobile.coreyhealth.widget.InstantCompleteTextView
            android:id="@+id/phoneno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneno_hint"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:lines="1"
            android:textSize="@dimen/normal_text_size"
            android:layout_marginTop="@dimen/text_gap"
        />
        <com.coremobile.coreyhealth.widget.InstantCompleteTextView
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address_hint"
            android:imeOptions="actionDone"
            android:inputType="text|textNoSuggestions"
            android:lines="1"
            android:textSize="@dimen/normal_text_size"
            android:layout_marginTop="@dimen/text_gap"
            android:textColor="@android:color/primary_text_light"
             />

       
        
        
         <TextView
            android:id="@+id/radiogroup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/radiogroupname" 
            android:textColor="@color/li_text_color_main"
            android:textSize="@dimen/normal_text_size" 
            android:textStyle="bold"/>
        <RadioGroup
        android:id="@+id/radiochoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
 
        <RadioButton
            android:id="@+id/radio_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiophone" 
            android:checked="true" 
            />
         <RadioButton
            android:id="@+id/radio_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioemail" 
            />
        <RadioButton
            android:id="@+id/radio_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioname" 
            />
 
    </RadioGroup>
    
        <CheckBox android:id="@+id/checkbox_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:textStyle="bold"
        android:onClick="onAdminCheckboxClicked"/>
        
         <Button
            android:id="@+id/invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invite"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/group_gap"
        />
   </LinearLayout>

</RelativeLayout>
