<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    tools:context="com.coremobile.coreyhealth.PcpSearchActivity" >
 <!-- header -->
    <include layout="@layout/layoutheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />
    <ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_above="@+id/search" 
  
    android:layout_alignParentTop="true"
    >
    <LinearLayout
        android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
       
      
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
          <TextView
        android:id="@+id/pcp_network_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:ellipsize="end"
     	android:focusable="false"
        android:maxLines="1"
        android:textColor="@color/li_text_color_main"
        android:textSize="@dimen/normal_text_size"
        android:text="@string/pcp_network_title_text"
        android:layout_marginTop="@dimen/li_txt_padding_top"
        android:textStyle="bold" />   
        
    
    <Spinner
        android:id="@+id/pcp_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
      	android:spinnerMode="dropdown"           
        android:background="@android:drawable/btn_dropdown"
         />
     <RadioGroup
        android:id="@+id/pcp_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    	
    	android:paddingLeft="10dp"    
    	android:layout_marginTop="@dimen/li_txt_padding_top"	
        android:orientation="horizontal" >
 
        <RadioButton
            android:id="@+id/radio_pcp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiopcp" 
            android:checked="true" 
            />
         <RadioButton
            android:id="@+id/radio_specialist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiospl" 
            />       
 
    </RadioGroup>  
     <EditText
            android:id="@+id/pcp_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:hint="@string/pcp_city_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:textSize="@dimen/normal_text_size"
            android:layout_marginTop="@dimen/text_gap"
          /> 
           
    		<EditText
            android:id="@+id/pcp_zipcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:hint="@string/postalcode"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:textSize="@dimen/normal_text_size"
            android:layout_marginTop="@dimen/text_gap"
          />    
    		<EditText
            android:id="@+id/pcp_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pcp_fname_hint"
            android:imeOptions="actionNext"
            android:inputType="text|textNoSuggestions"
            android:lines="1"
            android:textSize="@dimen/normal_text_size"
            android:layout_marginTop="@dimen/text_gap"
       		 />
    		 
    		<EditText
            android:id="@+id/pcp_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:hint="@string/pcp_lname_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:textSize="@dimen/normal_text_size"
            android:layout_marginTop="@dimen/text_gap"
        	/>
    		  
    	    
    		
         
           <EditText
            android:id="@+id/pcp_offname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          android:hint="@string/pcp_offname_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:textSize="@dimen/normal_text_size"
            android:layout_marginTop="@dimen/text_gap"
          />  
           
           
     		
             
        
    
        
     
    <TextView
        android:id="@+id/pcp_spl_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:ellipsize="end"
      	android:focusable="false"
        android:maxLines="1"
        android:textColor="@color/li_text_color_main"
        android:textSize="@dimen/normal_text_size"
        android:text="@string/pcp_spl_title_text"
       android:layout_marginTop="@dimen/li_txt_padding_top"
        android:textStyle="bold" />
    <Spinner
        android:id="@+id/pcp_pcp_spl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
       
       />
     
     <TextView
        android:id="@+id/pcp_gender_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:ellipsize="end"
      android:focusable="false"
        android:maxLines="1"
        android:textColor="@color/li_text_color_main"
        android:textSize="@dimen/normal_text_size"
         android:text="@string/pcp_gender_title_text"
         android:layout_marginTop="@dimen/li_txt_padding_top"
        android:textStyle="bold" />
    <Spinner
        android:id="@+id/pcp_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
       android:background="@android:drawable/btn_dropdown"
       android:spinnerMode="dropdown"
        
        />
      
     <TextView
        android:id="@+id/pcp_open_newpatient_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:ellipsize="end"
      android:focusable="false"
        android:maxLines="1"
        android:textColor="@color/li_text_color_main"
        android:textSize="@dimen/normal_text_size"
         android:text="@string/pcp_open_newpatient_title_text"
         android:layout_marginTop="@dimen/li_txt_padding_top"
        android:textStyle="bold" />
    <Spinner
        android:id="@+id/pcp_open_newpatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
       android:background="@android:drawable/btn_dropdown"
          android:spinnerMode="dropdown"     
         />
     
     <TextView
        android:id="@+id/pcp_hosp_priv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:ellipsize="end"
      android:focusable="false"
        android:maxLines="1"
        android:textColor="@color/li_text_color_main"
        android:textSize="@dimen/normal_text_size"
         android:text="@string/pcp_hosp_priv_title_text"
         android:layout_marginTop="@dimen/li_txt_padding_top"
        android:textStyle="bold" />
     
       <Spinner
        android:id="@+id/pcp_hosp_priv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
       android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"      
         />
      
     <TextView
        android:id="@+id/pcp_distance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:ellipsize="end"
      android:focusable="false"
        android:maxLines="1"
        android:textColor="@color/li_text_color_main"
        android:textSize="@dimen/normal_text_size"
         android:text="@string/pcp_distance_title_text"
         android:layout_marginTop="@dimen/li_txt_padding_top"
        android:textStyle="bold" />   
       <Spinner
        android:id="@+id/pcp_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
       android:background="@android:drawable/btn_dropdown"
       android:spinnerMode="dropdown"        
         />
       
        <TextView
        android:id="@+id/pcp_lang_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:ellipsize="end"
      android:focusable="false"
        android:maxLines="1"
        android:textColor="@color/li_text_color_main"
        android:textSize="@dimen/normal_text_size"
         android:text="@string/pcp_lang_title_text"
         android:layout_marginTop="@dimen/li_txt_padding_top"
        android:textStyle="bold" />
       <Spinner
        android:id="@+id/pcp_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
       android:background="@android:drawable/btn_dropdown"
       android:spinnerMode="dropdown"
       />
       >   
        <TextView
        android:id="@+id/pcp_board_cert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:ellipsize="end"
      android:focusable="false"
        android:maxLines="1"
        android:textColor="@color/li_text_color_main"
        android:textSize="@dimen/normal_text_size"
         android:text="@string/pcp_board_cert_title_text"
         android:layout_marginTop="@dimen/li_txt_padding_top"
        android:textStyle="bold" />
       <Spinner
        android:id="@+id/pcp_board_cert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
       android:background="@android:drawable/btn_dropdown"             
       />
       </LinearLayout>
     </ScrollView> 
    
           
        
        
     <View
        android:id="@+id/dividerL12"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_above="@+id/search"
        android:background="@android:color/darker_gray"
        android:padding="1dp" />   
      
    
 
    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/pcp_search"
        android:textSize="@dimen/btn_text_size"
        android:layout_marginLeft="@dimen/ctrl_margin_left"
        android:layout_marginRight="@dimen/ctrl_margin_right"
        android:layout_marginBottom="@dimen/btn_gap"
        android:background="@color/meritus_green_dark"
        
    />

</RelativeLayout>
